package observer_pattern;

public interface Observer {
    void update(float temp, float humidity, float pressure);
}