@startuml

interface Subject {
    +registerObserver(o: Observer)
    +removeObserver(o: Observer)
    +notifyObservers()
}

interface Observer {
    +update()
}

class ConcreteSubject {
    +registerObserver(o: Observer)
    +removeObserver(o: Observer)
    +notifyObservers()
}

class ConcreteObserver {
    +update()
}

Subject <|-- ConcreteSubject
Observer <|-- ConcreteObserver

ConcreteSubject "1" o-- "*" Observer : observers
ConcreteObserver --> ConcreteSubject : subject

@enduml
